<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.RecoveryPasswordActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_left"
        style="@style/guideline"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/guideline_vertical" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_right"
        style="@style/guideline"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/guideline_vertical" />

    <ImageView
        android:id="@+id/logo"
        style="@style/logo_iv"
        android:layout_marginTop="99dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title"
        style="@style/title_tv"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <TextView
        android:id="@+id/password_recovery_tv"
        style="@style/subtitle_tv"
        android:layout_marginTop="27dp"
        android:text="@string/password_recovery"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <TextView
        android:id="@+id/back_to_home"
        style="@style/back_to_home_tv"
        android:layout_marginTop="21dp"
        android:text="@string/back_to_home"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/password_recovery_tv" />

    <TextView
        android:id="@+id/send_to_email_tv"
        style="@style/info_tv"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/roboto"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/back_to_home" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:boxStrokeColor="@color/blue"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/send_to_email_tv"
        tools:ignore="MissingConstraints">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            style="@style/email_ev"
            android:hint="@string/email" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/change_password"
        style="@style/button"
        android:layout_marginTop="27dp"
        android:text="@string/recovery"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/wrong_email" />

    <TextView
        android:id="@+id/wrong_email"
        style="@style/wrong_tv"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="@string/wrong_email"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/emailInputLayout"
        tools:visibility="gone" />

</androidx.constraintlayout.widget.ConstraintLayout>