<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.AuthActivity">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_left"
        style="@style/guideline"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/guideline_vertical" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_right"
        style="@style/guideline"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/guideline_vertical" />


    <ImageView
        android:id="@+id/logo"
        style="@style/logo_iv"
        android:layout_marginTop="99dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title"
        style="@style/title_tv"
        android:layout_marginTop="25dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/logo" />


    <TextView
        android:id="@+id/sign_in"
        style="@style/subtitle_tv"
        android:layout_marginTop="35dp"
        android:text="@string/sign_in"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/title" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:hint="@string/login"
        app:boxStrokeColor="@color/blue"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/sign_in">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            style="@style/email_ev" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:hint="@string/password"
        app:boxStrokeColor="@color/blue"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/emailInputLayout"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            style="@style/password_ev" />


    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/wrong_password"
        style="@style/wrong_tv"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"
        android:text="@string/wrong_password"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/passwordInputLayout" />


    <Button

        android:id="@+id/sign_in_btn"
        style="@style/button"
        android:layout_marginTop="33dp"
        android:text="@string/sign_in_txt"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/wrong_password" />

    <TextView
        android:id="@+id/missing_password_tv"
        style="@style/missing_password_tv"
        android:layout_marginTop="27dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_btn" />

</androidx.constraintlayout.widget.ConstraintLayout>