<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/dialog_bg"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img_closeBottomSheet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="25dp"
                android:src="@drawable/ic_close" />

            <TextView
                android:id="@+id/add_expenditure_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="33dp"
                android:fontFamily="@font/museo"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/add_expenditure_txt"
                android:textColor="@color/black"
                android:textSize="@dimen/transaction_text_size"
                android:textStyle="bold" />

        </RelativeLayout>

        <View
            style="@style/view"
            android:layout_marginTop="64dp" />

        <RelativeLayout style="@style/relative_layout">


            <TextView
                android:id="@+id/company_text"
                style="@style/transactions_tv"
                android:padding="8dp"
                android:text="@string/company" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutCompany"
                app:boxStrokeWidth="0dp"
                app:boxStrokeColor="@android:color/transparent"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_alignParentEnd="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:textAlignment="textEnd"
                    android:textColor="#6B6B6B"
                    android:inputType="none"
                    android:id="@+id/company_actv"
                    android:text="Организация"
                    android:textSize="14sp"
                    android:fontFamily="@font/poppins"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>

        </RelativeLayout>
        <View
            style="@style/view" />
        <RelativeLayout style="@style/relative_layout">

            <TextView
                android:id="@+id/date_tv"
                style="@style/transactions_tv"
                android:padding="8dp"
                android:text="@string/date" />
            <TextView
                android:id="@+id/addDateExp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:background="@drawable/ed_bg_small"
                android:drawableRight="@drawable/ic_calendar"
                android:textSize="14sp"
                android:fontFamily="@font/poppins"
                android:textAlignment="center"
                android:padding="10dp" />


        </RelativeLayout>

        <View style="@style/view" />


        <RelativeLayout style="@style/relative_layout">

            <TextView
                android:id="@+id/amount_tv"
                style="@style/transactions_tv"
                android:padding="8dp"
                android:text="@string/amount" />

            <EditText
                android:id="@+id/addAmountExp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:background="@drawable/ed_bg_small"
                android:hint="Введите сумму"
                android:textAlignment="center"
                android:fontFamily="@font/poppins"
                android:textSize="14sp"
                android:inputType="number"
                android:padding="10dp"/>

        </RelativeLayout>

        <View style="@style/view" />

        <RelativeLayout style="@style/relative_layout">

            <TextView
                android:id="@+id/account_tv"
                style="@style/transactions_tv"
                android:padding="8dp"
                android:text="@string/account" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutAccount"
                app:boxStrokeWidth="0dp"
                app:boxStrokeColor="@android:color/transparent"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_alignParentEnd="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:textAlignment="textEnd"
                    android:textColor="#6B6B6B"
                    android:inputType="none"
                    android:id="@+id/account_actv_exp"
                    android:textSize="14sp"
                    android:fontFamily="@font/poppins"
                    android:text="Выберите счет"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>


        </RelativeLayout>

        <View style="@style/view" />

        <RelativeLayout style="@style/relative_layout">

            <TextView
                android:id="@+id/category_tv"
                style="@style/transactions_tv"
                android:padding="8dp"
                android:text="@string/category" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutCategory"
                app:boxStrokeWidth="0dp"
                app:boxStrokeColor="@android:color/transparent"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_alignParentEnd="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:textAlignment="textEnd"
                    android:textColor="#6B6B6B"
                    android:inputType="none"
                    android:id="@+id/category_actv_exp"
                    android:text="Категории расходов"
                    android:fontFamily="@font/poppins"
                    android:textSize="14sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>

        </RelativeLayout>

        <View style="@style/view" />

        <RelativeLayout style="@style/relative_layout">

            <TextView
                android:id="@+id/comments_tv"
                style="@style/transactions_tv"
                android:padding="8dp"
                android:text="@string/comments" />

            <EditText
                android:id="@+id/comments_ev"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_below="@id/comments_tv"
                android:layout_marginStart="10dp"
                android:layout_marginTop="11dp"
                android:layout_marginEnd="13dp"
                android:background="@drawable/cooments_bg"
                android:hint="@string/comments"
                android:padding="8dp"
                android:textSize="@dimen/text_small_size" />
        </RelativeLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/add_expenditure_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="38dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:background="@drawable/btn_bg"
            android:backgroundTint="#006666"
            android:fontFamily="@font/poppins"
            android:text="@string/add"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/btn_text_size"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/clear_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clear"
            android:layout_marginTop="20dp"
            android:textSize="@dimen/text_size"
            android:fontFamily="@font/poppins"
            android:textColor="#323232"
            android:textStyle="bold"
            android:layout_gravity="center"/>


    </LinearLayout>
</androidx.core.widget.NestedScrollView>