<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/dialog_bg"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img_closeBottomSheet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="25dp"
                android:src="@drawable/ic_close" />

            <TextView
                android:id="@+id/add_transfer_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:fontFamily="@font/museo"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/add_transfer"
                android:textColor="@color/black"
                android:textSize="@dimen/transaction_text_size"
                android:textStyle="bold" />


        </RelativeLayout>

        <View
            style="@style/view"
            android:layout_marginTop="53dp" />

        <!--        <RelativeLayout style="@style/relative_layout">-->

        <!--            <TextView-->
        <!--                android:id="@+id/date_tv"-->
        <!--                style="@style/transactions_tv"-->
        <!--                android:padding="8dp"-->
        <!--                android:text="@string/date" />-->

        <!--            <TextView-->
        <!--                android:id="@+id/addDateTransfer"-->
        <!--                android:layout_width="wrap_content"-->
        <!--                android:layout_height="wrap_content"-->
        <!--                android:layout_alignParentEnd="true"-->
        <!--                android:background="@drawable/ed_bg_small"-->
        <!--                android:drawableRight="@drawable/ic_calendar"-->
        <!--                android:textSize="14sp"-->
        <!--                android:fontFamily="@font/poppins"-->
        <!--                android:textAlignment="center"-->
        <!--                android:padding="10dp" />-->

        <!--        </RelativeLayout>-->
<!--        <View style="@style/view" />-->

<!--        <RelativeLayout style="@style/relative_layout">-->

<!--            <TextView-->
<!--                android:id="@+id/date_tv"-->
<!--                style="@style/transactions_tv"-->
<!--                android:padding="8dp"-->
<!--                android:text="@string/date" />-->

<!--            <TextView-->
<!--                android:id="@+id/addDateTransfer"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_alignParentEnd="true"-->
<!--                android:background="@drawable/ed_bg_small"-->
<!--                android:drawableRight="@drawable/ic_calendar"-->
<!--                android:fontFamily="@font/poppins"-->
<!--                android:padding="10dp"-->
<!--                android:textAlignment="center"-->
<!--                android:textSize="14sp" />-->


<!--        </RelativeLayout>-->

        <View style="@style/view" />

        <RelativeLayout style="@style/relative_layout">

            <TextView
                android:id="@+id/amount_tv"
                style="@style/transactions_tv"
                android:padding="8dp"
                android:text="@string/amount" />

            <EditText
                android:id="@+id/addAmountTransfer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:background="@drawable/ed_bg_small"
                android:fontFamily="@font/poppins"
                android:hint="Введите сумму"
                android:inputType="number"
                android:padding="10dp"
                android:textAlignment="center"
                android:textSize="14sp" />
        </RelativeLayout>

        <View style="@style/view" />

        <RelativeLayout style="@style/relative_layout">


            <TextView
                android:id="@+id/account_tv"
                style="@style/transactions_tv"
                android:padding="8dp"
                android:text="@string/from_account" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutAccount"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                app:boxStrokeColor="@android:color/transparent"
                app:boxStrokeWidth="0dp">

                <AutoCompleteTextView
                    android:id="@+id/fromAccount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:inputType="none"
                    android:text="Выберите счет"
                    android:textAlignment="textEnd"
                    android:textColor="#6B6B6B"
                    android:textSize="14sp" />

            </com.google.android.material.textfield.TextInputLayout>

        </RelativeLayout>

        <View style="@style/view" />

        <RelativeLayout style="@style/relative_layout">

            <TextView
                android:id="@+id/second_account_tv"
                style="@style/transactions_tv"
                android:padding="8dp"
                android:text="@string/to_account" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutAccountTo"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                app:boxStrokeColor="@android:color/transparent"
                app:boxStrokeWidth="0dp">

                <AutoCompleteTextView
                    android:id="@+id/toAccount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:inputType="none"
                    android:text="Выберите счет"
                    android:textAlignment="textEnd"
                    android:textColor="#6B6B6B"
                    android:textSize="14sp" />

            </com.google.android.material.textfield.TextInputLayout>
        </RelativeLayout>

        <View style="@style/view" />

        <RelativeLayout style="@style/relative_layout">

            <TextView
                android:id="@+id/comments_tv"
                style="@style/transactions_tv"
                android:padding="8dp"
                android:text="@string/comments" />

            <EditText
                android:id="@+id/comments_ev"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_below="@id/comments_tv"
                android:layout_marginStart="10dp"
                android:layout_marginTop="11dp"
                android:layout_marginEnd="13dp"
                android:background="@drawable/cooments_bg"
                android:hint="@string/comments"
                android:padding="8dp"
                android:textSize="@dimen/text_small_size" />
        </RelativeLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/add_transfer_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginStart="20dp"
            android:layout_marginTop="38dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/btn_bg"
            android:backgroundTint="#006666"
            android:fontFamily="@font/poppins"
            android:text="@string/add"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/btn_text_size"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/clear_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/poppins"
            android:text="@string/clear"
            android:textColor="#323232"
            android:textSize="@dimen/text_size"
            android:textStyle="bold" />

    </LinearLayout>
</androidx.core.widget.NestedScrollView>